# template-benchmark

./: .rustfmt.toml  Cargo.toml  README.md  build.rs  deny.toml
.github/workflows/: rust.yml
benches/: template-benchmark.rs
src/: lib.rs  main.rs
tmpls/: Cargo.toml
tmpls/askama/: Cargo.toml
tmpls/askama_git/: Cargo.toml  src
tmpls/dioxus/: Cargo.toml
tmpls/dioxus/src/: lib.rs
tmpls/handlebars/: Cargo.toml
tmpls/horrorshow/: Cargo.toml
tmpls/hypertext/: Cargo.toml
tmpls/hypertext/src/: lib.rs
tmpls/leptos/: Cargo.toml
tmpls/leptos/src/: lib.rs
tmpls/liquid/: Cargo.toml
tmpls/liquid/src/: lib.rs
tmpls/liquid/templates/: big-table.html  teams.html
tmpls/markup/: Cargo.toml
tmpls/maud/: Cargo.toml
tmpls/minijinja/: Cargo.toml
tmpls/ructe/: Cargo.toml
tmpls/sailfish/: Cargo.toml
tmpls/sycamore/: Cargo.toml
tmpls/sycamore/src/: lib.rs
tmpls/tera/: Cargo.toml  templates
tmpls/tinytemplate/: Cargo.toml
tmpls/vy/: Cargo.toml
tmpls/vy/src/: lib.rs
tmpls/yew/: Cargo.toml
tmpls/yew/src/: lib.rs  lifetimeless.rs
