[workspace]
members = [
    ".",
    "tmpls",
    "tmpls/askama",
    "tmpls/askama_git",
    "tmpls/dioxus",
    "tmpls/horrorshow",
    "tmpls/markup",
    "tmpls/minijinja",
    "tmpls/ructe",
    "tmpls/sailfish",
    "tmpls/tera",
    "tmpls/tinytemplate",
]
resolver = "3"

[package]
name = "template-benchmark"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[features]
default = ["compiled", "interpreted", "ssr"]

compiled = [
    "askama",
    "askama_git",
    "horrorshow",
    "hypertext",
    "markup",
    "maud",
    "ructe",
    "sailfish",
    "vy",
]
interpreted = ["handlebars", "minijinja", "tera", "tinytemplate"]
ssr = ["dioxus", "leptos", "sycamore", "yew"]

askama = ["dep:askama", "_contains_compiled"]
askama_git = ["dep:askama_git", "_contains_compiled"]
dioxus = ["dep:dioxus", "_contains_ssr"]
handlebars = ["dep:handlebars", "_contains_interpreted"]
horrorshow = ["dep:horrorshow", "_contains_compiled"]
hypertext = ["dep:hypertext", "_contains_compiled"]
leptos = ["dep:leptos", "_contains_ssr"]
markup = ["dep:markup", "_contains_compiled"]
maud = ["dep:maud", "_contains_compiled"]
minijinja = ["dep:minijinja", "_contains_interpreted"]
ructe = ["dep:ructe", "_contains_compiled"]
sailfish = ["dep:sailfish", "_contains_compiled"]
sycamore = ["dep:sycamore", "_contains_ssr"]
tera = ["dep:tera", "_contains_interpreted"]
tinytemplate = ["dep:tinytemplate", "_contains_interpreted"]
vy = ["dep:vy", "_contains_compiled"]
yew = ["dep:yew", "_contains_ssr"]

_contains_compiled = []
_contains_interpreted = []
_contains_ssr = []

[dependencies]
tmpls = { version = "*", path = "tmpls" }

askama = { version = "*", optional = true, path = "tmpls/askama", package = "tmpl-askama" }
askama_git = { version = "*", optional = true, path = "tmpls/askama_git", package = "tmpl-askama_git" }
dioxus = { version = "*", optional = true, path = "tmpls/dioxus", package = "tmpl-dioxus" }
handlebars = { version = "*", optional = true, path = "tmpls/handlebars", package = "tmpl-handlebars" }
horrorshow = { version = "*", optional = true, path = "tmpls/horrorshow", package = "tmpl-horrorshow" }
hypertext = { version = "*", optional = true, path = "tmpls/hypertext", package = "tmpl-hypertext" }
leptos = { version = "*", optional = true, path = "tmpls/leptos", package = "tmpl-leptos" }
markup = { version = "*", optional = true, path = "tmpls/markup", package = "tmpl-markup" }
maud = { version = "*", optional = true, path = "tmpls/maud", package = "tmpl-maud" }
minijinja = { version = "*", optional = true, path = "tmpls/minijinja", package = "tmpl-minijinja" }
ructe = { version = "*", optional = true, path = "tmpls/ructe", package = "tmpl-ructe" }
sailfish = { version = "*", optional = true, path = "tmpls/sailfish", package = "tmpl-sailfish" }
sycamore = { version = "*", optional = true, path = "tmpls/sycamore", package = "tmpl-sycamore" }
tera = { version = "*", optional = true, path = "tmpls/tera", package = "tmpl-tera" }
tinytemplate = { version = "*", optional = true, path = "tmpls/tinytemplate", package = "tmpl-tinytemplate" }
vy = { version = "*", optional = true, path = "tmpls/vy", package = "tmpl-vy" }
yew = { version = "*", optional = true, path = "tmpls/yew", package = "tmpl-yew" }

ahash = { version = "0.8", features = ["no-rng"] }
criterion = { version = "0.6", features = ["html_reports"] }
pretty-error-debug = "0.3"
thiserror = "2"

[build-dependencies]
pretty-error-debug = "0.3"
self_cell = "1"
thiserror = "2"

[[bench]]
name = "template-benchmark"
harness = false

[lints.clippy]
type_complexity = "allow"
